--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -23,7 +23,8 @@
 }
 
 .navLayout {
-    margin-left: 200px;
+    // margin-left: 200px;
+    transition: all .2s;
 }
 
 .content {
@@ -38,5 +39,6 @@
   background-repeat: no-repeat;
   background-position: center 110px;
   background-size: 100%;
-  height: 100vh;
+  // height: 100vh;
+  min-height: 100vh;
 }
