--- a/src/pages/base/page.module.scss
+++ b/src/pages/base/page.module.scss
@@ -1,6 +1,7 @@
 .login {
-    height: 100%;
+    // height: 100%;
     width: 100%;
+    padding-top: 160px;
     .info {
         .title {
             font-size: 40px;
@@ -21,7 +22,7 @@
     }
     .content {
         width: 370px;
-        margin-bottom: 250px;
+        // margin-bottom: 250px;
         .input {
             // margin-bottom: 20px;
         }
