--- a/src/pages/product/components/comp.module.scss
+++ b/src/pages/product/components/comp.module.scss
@@ -2,3 +2,14 @@
     font-size: 14px;
     line-height: 28px;
 }
+
+.add {
+    padding: 16px;
+    background-color: #fff;
+}
+.addsec {
+    padding: 16px;
+    background-color: #fff;
+    border: 1px solid #f0f0f0;
+    border-bottom: none;
+}
