界面移动端适配

--- a/src/components/TableFilter/index.module.scss
+++ b/src/components/TableFilter/index.module.scss
@@ -24,3 +24,13 @@
         margin-left: 16px;
     }
 }
+@media screen and (max-width: 575px) {
+    .sort {
+        .sortinput {
+            max-width: none;
+        }
+        .sortrange {
+            min-width: max-content;
+        }
+    }
+}
