--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -20,6 +20,17 @@
   height: 100vh;
   position: fixed;
   left: 0;
+  z-index: 9;
+}
+
+.shadow {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 8;
 }
 
 .navLayout {
