--- a/src/pages/base/page.module.scss
+++ b/src/pages/base/page.module.scss
@@ -1,7 +1,7 @@
 .login {
     // height: 100%;
     width: 100%;
-    padding-top: 160px;
+    padding: 12% 20px 0;
     .info {
         .title {
             font-size: 40px;
@@ -21,7 +21,8 @@
         }
     }
     .content {
-        width: 370px;
+        width: 100%;
+        max-width: 370px;
         // margin-bottom: 250px;
         .input {
             // margin-bottom: 20px;
@@ -37,4 +38,10 @@
     position: absolute;
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 575px) {
+    .login {
+        padding-top: 20%;
+    }
 }
