--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -50,6 +50,13 @@
   background-repeat: no-repeat;
   background-position: center 110px;
   background-size: 100%;
-  // height: 100vh;
+  background-attachment: fixed;
   min-height: 100vh;
+}
+
+@media screen and (max-width: 575px) {
+  .layout {
+    background-size: auto 50%;
+    background-position: 0 110px;
+  }
 }
