--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -56,7 +56,7 @@
 
 @media screen and (max-width: 575px) {
   .layout {
-    background-size: auto 50%;
+    background-size: 300% auto;
     background-position: 0 110px;
   }
 }
