--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -21,6 +21,9 @@
   position: fixed;
   left: 0;
   z-index: 9;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .shadow {
@@ -29,13 +32,13 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 8;
 }
 
 .navLayout {
-    // margin-left: 200px;
-    transition: all .2s;
+  // margin-left: 200px;
+  transition: all 0.2s;
 }
 
 .content {
