--- a/src/pages/base/page.module.scss
+++ b/src/pages/base/page.module.scss
@@ -1,7 +1,7 @@
 .login {
     // height: 100%;
     width: 100%;
-    padding: 12% 20px 0;
+    padding: 220px 20px 0;
     .info {
         .title {
             font-size: 40px;
